<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3DC0C7">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src='@drawable/users'
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/lg_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="aliyilmaz"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="123456"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


        <TextView
            android:id="@+id/lg_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:layout_below="@+id/lg_layout"
            android:layout_alignLeft="@+id/lg_layout"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lg_type"
            android:layout_alignLeft="@id/lg_layout"
            android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_type"
                    android:textColor="#000000"
                    android:layout_below="@+id/lg_type"
                    android:layout_alignLeft="@id/lg_layout"
                    android:layout_marginTop="5dp"
                    android:checked="true"
                    />
        </RadioGroup>


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/radio_group"
            android:layout_centerHorizontal="true"
            android:text="@string/login_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/loginbtn"
            android:layout_centerHorizontal="true"
            android:text="@string/register_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="10pt"
            android:textAlignment="center"
            />



</RelativeLayout>