<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3DC0C7"
    >

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/man_profil"
        />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_form_rounded"
        android:layout_below="@+id/user_logo"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pp_name"
            android:layout_marginLeft="15dp"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/user_age"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pp_age"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pp_gender"
            android:layout_marginRight="15dp"
            android:layout_alignTop="@+id/user_age"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/pulse_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_form_rounded"
        android:layout_centerInParent="true"
        android:layout_below="@+id/relativeLayout">

        <ImageView
            android:id="@+id/pic_pulse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/heart1"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/static_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse"
            android:textSize="10pt"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/pic_pulse"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/pulse_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_pulse"
            android:layout_toRightOf="@+id/pic_pulse"
            android:layout_marginLeft="5dp"
            android:text="01/10 18:28"
            />

        <TextView
            android:id="@+id/value_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="78"
            android:textSize="16pt"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:layout_toLeftOf="@+id/static_bpm"
            />
        <TextView
            android:id="@+id/static_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BPM"
            android:layout_centerInParent="true"
            android:textSize="6pt"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spo2_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_form_rounded"
        android:layout_centerInParent="true"
        android:layout_below="@+id/pulse_ui">

        <ImageView
            android:id="@+id/pic_spo2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/oxygen"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/static_spo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spo2"
            android:textSize="10pt"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/pic_spo2"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/spo2_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_spo2"
            android:layout_toRightOf="@+id/pic_spo2"
            android:layout_marginLeft="5dp"
            android:text="01/10 18:28"
            />

        <TextView
            android:id="@+id/value_spo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="78"
            android:textSize="16pt"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:layout_toLeftOf="@+id/static_per"
            />
        <TextView
            android:id="@+id/static_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:layout_centerInParent="true"
            android:textSize="6pt"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/ecg_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_form_rounded"
        android:layout_centerInParent="true"
        android:layout_below="@+id/spo2_ui">

        <ImageView
            android:id="@+id/pic_ecg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ecglines"
            android:layout_margin="2dp"
            />
        <TextView
            android:id="@+id/static_ecg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ecg"
            android:textSize="10pt"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/pic_ecg"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:id="@+id/ecg_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_ecg"
            android:layout_toRightOf="@+id/pic_ecg"
            android:layout_marginLeft="5dp"
            android:text="01/10 18:28"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Grafik'e Bak >"
            android:textSize="8pt"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>


</RelativeLayout>